kube/1-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: notes-deploy
  namespace: notes
  labels:
    app: node
spec:
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
        - name: node
          image: asskit/notes:c983ded109879f018748ce3d358d5af8da63f03c
          ports:
            - name: web
              containerPort: 8080
