kube/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
  namespace: notes
spec:
  selector:
    app: node
  ports:
  - name: http
    targetPort: 8080
    port: 80
