kube/3-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: notes-ingress
  namespace: notes
  annotations:
    kubernetes.io/ingress.class: traefik-external
    link.argocd.argoproj.io/external-link: 'https://notes.nzdev.org/'
spec:
  entryPoints:
    - websecure

  routes:    
    - match: Host(`notes.nzdev.org`)
      kind: Rule
      services:
        - name: notes-service
          port: 80
